update AuthManager